# fox

./: Cargo.toml  README.md  language.md
examples/: fact.fox  test.fox  tests.fox
fox/: Cargo.toml
fox/src/: lib.rs
fox_core/: Cargo.toml
fox_core/src/: lib.rs
fox_core/src/engine/: engine.rs  env.rs  error.rs  expr.rs  function.rs  mod.rs  stack.rs  typing.rs  value.rs
fox_core/src/parsing/: lexer.rs  parser.rs
fox_core/src/stdlib/: list.rs
fox_macro/: Cargo.toml
src/: lib.rs  main.rs
src/engine/: mod.rs
src/parser/: ast.rs  mod.rs
src/parsing/: ast.rs  lexer.rs  mod.rs  parser.rs
tests/: parser.rs
